Fixed add to cart action

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.projectKey=vuegcomps-front
 sonar.login=bab77de1cd01c2d80e2d19c3fdfc99f08a84da5a
 
 sonar.sources=./src
-sonar.test.inclusions=src/**/*.test.js
-sonar.coverage.exclusions=src/**/*.test.js
+sonar.test.inclusions=src/**/*.spec.ts
+sonar.coverage.exclusions=src/**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
 # --- optional properties ---
